<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/space_16" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ly_share_weichat_circle"
            style="@style/dialog_content_share_ll" >

            <TextView
                style="@style/dialog_content_share_text"
                android:drawableTop="@drawable/share_icon_wechatfriends_selector"
                android:text="@string/platform_weichat_circle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_share_weichat"
            style="@style/dialog_content_share_ll" >

            <TextView
                style="@style/dialog_content_share_text"
                android:drawableTop="@drawable/share_icon_wechat_selector"
                android:text="@string/platform_weichat" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_share_sina_weibo"
            style="@style/dialog_content_share_ll" >

            <TextView
                style="@style/dialog_content_share_text"
                android:drawableTop="@drawable/share_icon_sinaweibo_selector"
                android:text="@string/platform_sina" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ly_share_qq"
            style="@style/dialog_content_share_ll" >

            <TextView
                style="@style/dialog_content_share_text"
                android:drawableTop="@drawable/share_icon_qq_selector"
                android:text="@string/platform_qq" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_share_copy_link"
            style="@style/dialog_content_share_ll" >

            <TextView
                style="@style/dialog_content_share_text"
                android:drawableTop="@drawable/share_icon_copy_link_selector"
                android:text="@string/platform_copy_link" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_share_more_option"
            style="@style/dialog_content_share_ll" >

            <TextView
                style="@style/dialog_content_share_text"
                android:drawableTop="@drawable/share_icon_more_selector"
                android:text="@string/platform_more_option" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>